--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -11,7 +11,7 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/settings"
+        android:text="Settings"
         android:textColor="@color/black"
         android:textSize="34sp"
         android:textStyle="bold"
@@ -31,7 +31,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.989"
-        app:srcCompat="@drawable/home" />
+        app:srcCompat="@drawable/ic_home" />
 
     <TextView
         android:id="@+id/textView3"
@@ -52,7 +52,7 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/profile_name"
+        android:text="Jainil Shah"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -78,7 +78,7 @@
         android:id="@+id/textView7"
         android:layout_width="148dp"
         android:layout_height="18dp"
-        android:text="@string/profileemail"
+        android:text="jainil123@gmail.com"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -91,7 +91,7 @@
         android:id="@+id/textView8"
         android:layout_width="44dp"
         android:layout_height="30dp"
-        android:text="@string/data"
+        android:text="Data"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -131,7 +131,7 @@
         android:id="@+id/textView10"
         android:layout_width="91dp"
         android:layout_height="30dp"
-        android:text="@string/language"
+        android:text="Language"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -213,7 +213,7 @@
         android:id="@+id/textView18"
         android:layout_width="77dp"
         android:layout_height="30dp"
-        android:text="@string/support"
+        android:text="Support"
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
