--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -9,8 +9,8 @@
 
     <ImageView
         android:id="@+id/arrow"
-        android:layout_width="60dp"
-        android:layout_height="48dp"
+        android:layout_width="46dp"
+        android:layout_height="39dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.074"
@@ -53,7 +53,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.873"
-        app:srcCompat="@drawable/previous" />
+        app:srcCompat="@drawable/ic_previousicon" />
 
     <ImageView
         android:id="@+id/play"
@@ -65,7 +65,7 @@
         app:layout_constraintStart_toEndOf="@+id/previous"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.873"
-        app:srcCompat="@drawable/pause" />
+        app:srcCompat="@drawable/ic_pauseicon" />
 
     <ImageView
         android:id="@+id/next"
@@ -77,7 +77,7 @@
         app:layout_constraintStart_toEndOf="@+id/play"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.873"
-        app:srcCompat="@drawable/next" />
+        app:srcCompat="@drawable/ic_nexticon" />
 
     <TextView
         android:id="@+id/textView"
